<!--
  Copyright 2015 Intel Corporation

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
     >

    <TextView
        android:id="@+id/device_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <View
        android:background="@color/horizontalLineColor"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:id="@+id/view"
        android:layout_below="@+id/device_info_label"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7"
        android:layout_below="@+id/device_info_label"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/device_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/device_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/device_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/device_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout9"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/manufacturer_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/manufacturer_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/model_number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/model_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/serial_number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/serial_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/firmware_revision"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/firmware_revision_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/software_revision"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/software_revision_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hardware_revision"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/hardware_revision_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/battery_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        />

    <View
        android:background="@color/horizontalLineColor"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/battery_info_label"
        android:layout_alignParentStart="true"
        android:id="@+id/battery_info_view"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/battery_info_view"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/battery_level"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/battery_level_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </LinearLayout>
    <Button
        android:gravity="center"
        android:background="@color/colorFourth"
        android:id="@+id/update_battery_level"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/update_battery_level"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />


    <Button
        android:background="@color/colorThird"
        android:id="@+id/pair"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pair"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@color/colorFourth"
        android:id="@+id/connect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_above="@+id/pair"
        android:layout_alignParentStart="true" />



</RelativeLayout>